--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -14,7 +14,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\img\saude.jpg" />
+    <Content Remove="wwwroot\img\telemedicina1.jpeg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.7.0" />
   </ItemGroup>
 
 </Project>
